# contractskit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  audit.toml  deny.toml
.github/workflows/: backfill.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  tickers.rs  usaspending.rs
crates/contractskit/: Cargo.toml
crates/contractskit/src/: client.rs  error.rs  fetcher.rs  lib.rs  parquet_io.rs  record.rs
crates/contractskit/tests/: client.rs
data/: manifest.json
data/year=2019/: contracts-2019.parquet
data/year=2020/: contracts-2020.parquet
data/year=2021/: contracts-2021.parquet
data/year=2022/: contracts-2022.parquet
data/year=2023/: contracts-2023.parquet
data/year=2026/: contracts-2026.parquet
