[package]
name = "contractskit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "contractskit-cli"
path = "src/main.rs"

[dependencies]
contractskit = { path = "../crates/contractskit", version = "0.1.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
