[package]
name = "contractskit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "US federal government contract awards per company, from the public USASpending.gov data, for Rust."
readme = "../../README.crates.md"
exclude = [
    "/data",
    "/docs",
    "/.github",
    "/cli",
    "CONTRIBUTING.md",
]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
directories = "5"

[dev-dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"
wiremock = "0.6"
